<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/upload_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/upload_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingHorizontal="10dp"
            android:src="?attr/homeAsUpIndicator" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/upload_new_contents"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/upload_btn_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingHorizontal="20dp"
            android:src="?android:attr/textCheckMark" />
    </LinearLayout>

    <ImageView
        android:id="@+id/upload_iv_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upload_ll" />

    <EditText
        android:id="@+id/upload_et"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@android:color/transparent"
        android:hint="@string/upload_hint_input"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/upload_iv_image"
        app:layout_constraintTop_toBottomOf="@id/upload_ll" />

    <View
        android:id="@+id/upload_view_border1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/upload_border_grey"
        app:layout_constraintTop_toBottomOf="@id/upload_iv_image" />

    <TextView
        android:id="@+id/upload_tv_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_tag"
        android:textColor="@color/black"
        android:layout_margin="20dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/upload_view_border1" />

    <View
        android:id="@+id/upload_view_border2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/upload_border_grey"
        app:layout_constraintTop_toBottomOf="@id/upload_tv_tag" />

    <TextView
        android:id="@+id/upload_tv_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_location"
        android:textColor="@color/black"
        android:layout_margin="20dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/upload_view_border2" />

    <View
        android:id="@+id/upload_view_border3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/upload_border_grey"
        app:layout_constraintTop_toBottomOf="@id/upload_tv_location" />


</androidx.constraintlayout.widget.ConstraintLayout>